go/k8s/kubelet/node-webhook/deploy/kubernetes.yaml

apiVersion: v1
kind: Service
metadata:
  name: node-status-webhook
  namespace: default
spec:
  selector:
    app: node-status-webhook
  ports:
    - port: 443
      targetPort: 8443
      protocol: TCP
  type: ClusterIP

---

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: node-status-webhook
  annotations:
    cert-manager.io/inject-ca-from: default/node-status-serving-cert
  labels:
    app: node-status-webhook
webhooks:
  - name: mutating.node-status-webhook.net
    clientConfig:
      #      url: "https://3657e7190bfe.ngrok.io" # for debug in local
      service:
        name: node-status-webhook
        namespace: default
        path: "/"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: '*'
    namespaceSelector:
      matchExpressions:
        - key: node-status-webhook
          operator: NotIn
          values:
            - disable
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 30
    reinvocationPolicy: Never

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-status-webhook
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: node-status-webhook
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: node-status-webhook
    spec:
      containers:
        - args:
            - --tls-cert-file
            - /etc/service-webhook/tls.crt
            - --tls-private-key-file
            - /etc/service-webhook/tls.key
          image: lx1036/node-status-webhook:1.0.1
          imagePullPolicy: IfNotPresent
          name: node-status-webhook
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - mountPath: /etc/service-webhook
              name: service-certs
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: service-certs
          secret:
            defaultMode: 420
            secretName: node-status-webhook-server-cert
